# gtk-rs-state

./: Cargo.toml  README.md  ui.glade
examples/: change_ui_from_thread.rs  init_with_glade_builder.rs  own_struct.rs
src/: fnbox.rs  lib.rs  main.rs  widgetrefs.rs  withgtk.rs
